web-infras/parser/tests/fixtures/babel/es2018/object-rest-spread/11/output.txt
[SyntaxError]: Identifier has already been declared. (2,24)
2|export const { bar, ...foo } = baz;
 |                      ^
[SyntaxError]: Identifier has already been declared. (2,24)
2|export const { bar, ...foo } = baz;
 |                      ^
